Simplify PasswordEncoder config.