@@ -1,6 +1,6 @@
 package com.github.justincranford.spring.util.config;
 
-import java.util.Map;
+import java.util.Collections;
 
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
@@ -14,12 +14,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 public class PasswordEncoderITConfig {
 	@Bean
 	public PasswordEncoder passwordEncoder() {
-		final String defaultEncoderId = "sha256";
-		final PasswordEncoder passwordEncoder = new DelegatingPasswordEncoder(defaultEncoderId,
-			Map.of(
-				"noop", org.springframework.security.crypto.password.NoOpPasswordEncoder.getInstance(),
-				"sha256", new MessageDigestPasswordEncoder("SHA-256")
-			));
-		return passwordEncoder;
+		return new DelegatingPasswordEncoder("sha256", Collections.singletonMap("sha256", new MessageDigestPasswordEncoder("SHA-256")));
 	}
 }
